--- a/frontend/projects-list.html
+++ b/frontend/projects-list.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     
-    <h1>Projects</h1>
-    <section id="projects-wrapper">
+    <section id="projects--wrapper">
 
     </section>
 
