--- a/frontend/projects-list.html
+++ b/frontend/projects-list.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     
+    <section>
+        <a href="login.html" id="login-btn">Login</a>
+        <a href="" id="logout-btn">Logout</a>
+    </section>
+
     <section id="projects--wrapper">
 
     </section>
